# data-warehouse-analysis-tool

./: .gitignore  PROGRESS.md  README.md  lineage.html  pyproject.toml
dwat/: __init__.py  cli.py  lineage.py
dwat/parsers/: dag_parser.py  query_parser.py  sql_parser.py
dwat/ui/: styles.css  template.html  visualization.js
examples/definitions/: games.yml  teams.yml
examples/sample_warehouse/definitions/: games.yml  teams.yml
examples/sample_warehouse/sql_scripts/fact/: fct_game.sql
examples/sql/dimension/: dim_team.sql
examples/sql/fact/: fct_game.sql
examples/sql_scripts/staging/: stg_game.sql
tests/: scratch.ipynb
